# iced_emg

./: .clippy.toml  .gitignore  Cargo.toml  Makefile  fleet.toml
emg/: Cargo.toml
emg/src/: error.rs  graph.rs  lib.rs  macros.rs
emg/src/graph/: dir.rs  edges.rs  iter_format.rs  neighbors.rs
emg/src/insta/: emg__graph__graph_test_mod__graph_a.snap  emg__graph__graph_test_mod__graph_a_removed.snap
emg/tests/: graph_test.rs
emg_animation/: Cargo.toml  Makefile  fleet.toml
emg_animation/.cargo/: config.toml
emg_animation/benches/: my_benchmark.rs
emg_animation/src/: func.rs  lib.rs  models.rs  props.rs  render.rs
emg_animation/src/models/: color.rs  convert.rs  opacity.rs
emg_animation/src/snapshots/: emg_animation__tests__am1-first.snap  emg_animation__tests__am1-first.snap.new  emg_animation__tests__am2.snap  emg_animation__tests__am2.snap.new  emg_animation__tests__am3.snap  emg_animation__tests__am3.snap.new  emg_animation__tests__am_last.snap  emg_animation__tests__am_last.snap.new  emg_animation__tests__init.snap  emg_animation__tests__init.snap.new  emg_animation__tests__interrupt.snap  emg_animation__tests__interrupt.snap.new
emg_animation/tests/: pcbench.rs  wasmbench.rs
emg_bind/: Cargo.toml  Makefile
emg_bind/src/: _bind_view.rs  _element.rs  _gid.rs  _graph_layout.rs  _graph_store.rs  _state_store.rs  anchor.rs  animation.rs  application.rs  bind_view.rs  build_view.rs  button.rs  element.rs  emg_impl.rs  emg_web.rs  error.rs  event.rs  executor.rs  g_element.rs  g_node.rs  g_tree_builder.rs  g_tree_builder_element.rs  g_tree_builder_fn_for_NodeItem.rs  g_tree_builder_fn_for_node_item.rs  g_tree_builder_fn_for_node_item_rc.rs  g_tree_builder_fn_for_node_item_rc_sv.rs  gid.rs  graph_layout.rs  graph_store.rs  impl_refresh.rs  layer.rs  lib.rs  node_builder.rs  orders.rs  realtime_update.rs  refresh_use.rs  refreshers.rs  result.rs  sandbox.rs  settings.rs  (+6 more)
emg_bind/src/animation/: event.rs
emg_bind/src/emg_web/: application.rs  bus.rs  element.rs  hasher.rs  node_builder.rs  widget.rs
emg_bind/src/g_element/: impls.rs
emg_bind/src/g_node/: index.rs  node_item_rc.rs  node_item_rc_sv.rs
emg_bind/src/node_builder/: gelement2nodebuilderwidget.rs  text.rs
emg_bind/src/snapshots/: emg_bind__tests__tree-a.snap  emg_bind__tests__tree-b.snap
emg_bind/src/subscription/: events.rs
emg_bind/src/window/: event.rs  icon.rs  observe.rs  position.rs  settings.rs
emg_common/: Cargo.toml
emg_common/src/: animation.rs  any.rs  display.rs  drag.rs  error.rs  func.rs  keyboard.rs  layout.rs  lib.rs  macros.rs  measures.rs  mouse.rs  render_loop.rs  result.rs  time.rs  tools.rs  touch.rs  window.rs
emg_common/src/drag/: event.rs
emg_common/src/keyboard/: event.rs  modifiers.rs
emg_common/src/mouse/: button.rs  event.rs  interaction.rs
emg_common/src/touch/: event.rs
emg_common/src/window/: event.rs
emg_core/: Cargo.toml
emg_core/src/: func.rs  lib.rs  macros.rs  measures.rs
emg_element/: Cargo.toml
emg_element/src/: component.rs  error.rs  g_element.rs  g_node.rs  g_tree_builder.rs  graph_edit.rs  graph_program.rs  impl_refresh.rs  lib.rs  node_builder.rs  widget.rs
emg_element/src/component/: video.rs
emg_element/src/g_node/: _node_item_rc_sv.rs  (+4 more)
emg_futures/: Cargo.toml
emg_futures/src/: backend.rs  command.rs  executor.rs  future_runtime.rs  lib.rs  maybe_send.rs  runtime.rs
emg_global/: Cargo.toml
emg_global/src/: lib.rs
emg_graphics_backend/: Cargo.toml
emg_graphics_backend/src/: backend.rs  error.rs  lib.rs  renderer.rs  viewport.rs  window.rs
emg_hasher/: Cargo.toml
emg_hasher/src/: lib.rs
emg_layout/: Cargo.toml  Makefile  tracing.folded
emg_layout/.cargo/: config.toml
emg_layout/benches/: my_benchmark.rs
emg_layout/src/: add_values.rs  animation.rs  calc.rs  ccsa.rs  css_calc_op.rs  epath.rs  impl_refresh.rs  lib.rs  old.rs  parser.rs
emg_msg_impl/: Cargo.toml
emg_msg_impl/src/: lib.rs
emg_msg_macro/: Cargo.toml
emg_msg_macro/src/: lib.rs
emg_native/: Cargo.toml
emg_native/src/: bus.rs  clipboard.rs  command.rs  drag.rs  event.rs  features.rs  future_runtime.rs  keyboard.rs  lib.rs  mouse.rs  paint_ctx.rs  program.rs  renderer.rs  system.rs  touch.rs  widget.rs  window.rs
emg_orders/: Cargo.toml
emg_orders/src/: lib.rs  orders.rs
emg_piet_gpu/: Cargo.toml
emg_piet_gpu/src/: backend.rs  lib.rs  settings.rs  window.rs
emg_refresh/: Cargo.toml
emg_refresh/src/: impl_refresh.rs  lib.rs  refresh_use.rs  refresh_use_for.rs  refreshers.rs  test.rs
emg_renderer/: Cargo.toml
emg_renderer/src/: lib.rs  paint_ctx.rs
emg_shaping/: Cargo.toml
emg_shaping/.cargo/: config.toml
emg_shaping/src/: impl_shaping.rs  lib.rs  shape_of_use.rs  shapers.rs  shaping_use.rs  test.rs
emg_state/: Cargo.toml
emg_state/src/: error.rs  g_store.rs  general_fns.rs  general_struct.rs  general_traits.rs  lib.rs  state_anchor.rs  state_lit.rs  state_var.rs  state_voa.rs  test_sv.rs  use_state.rs  use_state_impl.rs
emg_vello/: Cargo.toml
emg_vello/src/: backend.rs  lib.rs  scene_ctx.rs  settings.rs  window.rs
emg_web/: Cargo.toml
emg_web/js/: resize_observe.js
emg_web/src/: application.rs  bus.rs  command.rs  event.rs  g_element.rs  g_node.rs  g_tree_builder.rs  g_tree_builder_fn_for_node_item_rc_sv.rs  hasher.rs  impl_refresh.rs  lib.rs  node_builder.rs  orders.rs  result.rs  sandbox.rs  settings.rs  subscription.rs  widget.rs  window.rs
emg_winit/: Cargo.toml
emg_winit/src/: application.rs  bus.rs  clipboard.rs  conversion.rs  error.rs  lib.rs  mode.rs  orders.rs  proxy.rs  semantic_position.rs  settings.rs  window.rs
examples/checkbox/: Cargo.toml
examples/counter/: Cargo.toml  index.html
gtree/: Cargo.toml
gtree/src/: lib.rs
gtree_macro/: Cargo.toml  Makefile
gtree_macro/src/: cassowary.rs  lib.rs  quote_option.rs
gtree_macro/tests/: ccss.rs  test_ccss.rs
gtree_proc_macro/: Cargo.toml
gtree_proc_macro/src/: lib.rs
gtree_proc_macro/tests/: test.rs
tests/: Cargo.toml  Makefile  a  a.html  a.pp  b.pp  fleet.toml
tests/.cargo/: config.toml
tests/src/: lib.rs
(+408 files in other folders)
