[workspace]
resolver = "2"
members = [
    "gtree_proc_macro",
    "gtree_macro",
    "gtree",
    "emg_common",
    "emg_element",
    "emg_layout",
    "emg_bind",
    "emg_refresh",
    "emg_state",
    "emg_animation",
    "emg_orders",
    "emg_debuggable",
    "emg_msg_macro",
    "emg_msg_impl",
    "emg_hasher",
    "emg_web",
    "emg_futures",
    "emg_native",
    "emg_winit",
    "emg_piet_gpu",
    "emg_renderer",
    "emg_graphics_backend",
    "tests",
    "examples/counter_new_resize",
    "examples/counter",
]
# exclude = [""]
