
[workspace]
resolver = "2"
members = [
    "emg",
    "gtree_proc_macro",
    "gtree_macro",
    "gtree",
    "emg_common",
    "emg_element",
    "emg_layout",
    "emg_bind",
    "emg_shaping",
    "emg_state",
    "emg_animation",
    "emg_orders",
    "emg_debuggable",
    "emg_msg_macro",
    "emg_msg_impl",
    "emg_hasher",
    # "emg_web",
    "emg_futures",
    "emg_native",
    "emg_winit",
    "emg_vello",
    "emg_renderer",
    "emg_graphics_backend",
    # "tests",
    "examples/counter",
    "examples/moving_edge",
    "examples/checkbox",
]
exclude = ["tests", "emg_web"]

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
window_clipboard = { path = "../window_clipboard" }
