[package]
name = "emg"
version = "0.1.0"
authors = ["cuiluming <vdcoolzi@gmail.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[lib]
name = "emg"
bench = false
# crate-type = ["cdylib", "rlib"]

[features]
default = []
# pool = ["imbl/pool"]
insta = []

[dependencies]
indexmap = "1.9"


delegate = "0.9.0"

emg_state = { path = "../emg_state" }
emg_hasher = { path = "../emg_hasher" }
emg_common = { path = "../emg_common" }

owning_ref = "0.4.1"
tracing = "0.1"


indented = "0.1.0"
thiserror = "1.0"
anyhow = "1.0.70"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
color-eyre = "0.6.2"
insta = "1"
tracing-tree = { path = "../../tracing-tree" }
