[package]
name = "emg_animation"
version = "0.1.0"
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing = "0.1.26"
im-rc = "15.0.0"
# iter_fixed = "0.2.2"
# emg_orders = { path = "../emg_orders"}
# emg_debuggable = { path = "../emg_debuggable" }
emg_state = { path = "../emg_state" }
emg_core = { path = "../emg_core" }
seed_styles = { path = "../../styles_hooks/seed_styles" }
ordered-float = "2.8.0"

[dev-dependencies]
insta = "1.7.2"
