[package]
name = "emg_animation"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
tracing = "0.1"
# iter_fixed = "0.2.2"
# emg_orders = { path = "../emg_orders"}
# emg_debuggable = { path = "../emg_debuggable" }
emg_state = { path = "../emg_state" }
emg_core = { path = "../emg_core" }
seed_styles = { path = "../../styles_hooks/seed_styles" }
ordered-float = "2"
derive_more = "0.99"

tinyvec = { version = "1.5.1", features = ["alloc"] }
smallvec = { version = "1.7.0", features = ["const_generics", "union"] }


[dev-dependencies]
insta = "1"
criterion = { version = "0.3", features = ["html_reports", "real_blackbox"] }
# plotters = "0.3.1"
[[bench]]
name = "my_benchmark"
harness = false
