[package]
name = "emg_bind"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
description = "element motion graph iced bind"
repository = "https://github.com"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["web", "iced", "emg"]
categories = ["web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
pool = []


[dependencies]
gtree = { path = "../gtree" }
emg_layout = { path = "../emg_layout" }
emg_refresh = { path = "../emg_refresh" }
emg_state = { path = "../emg_state" }
emg_common = { path = "../emg_common" }
emg_futures = { path = "../emg_futures" }
emg-msg-macro = { version = "=0.1.0", path = "../emg_msg_macro" }
emg_animation = { path = "../emg_animation" }
emg = { path = "../../emg" }
#--------------
# functionate = { path = "../../functionate" }
# overloadf = { path = "../../overloadf" }
# log = "0.4"
# lazy_static = "1.4.0"
# downcast-rs = "1.2.0"


iced_style = { path = "../../iced/style" }
# from_variants = "0.5.0"
# delegate = "0.6.1"


tracing = "0.1"

# rustc-hash = "1.1.0"

# tinyvec = { version = "1.5.1", features = ["alloc"] }
# smallvec = { version = "1.8.0", features = ["const_generics", "union"] }

# emg_debuggable = { path = "../emg_debuggable" }
# stream_throttle ={ version = "0.4.0",default-features = false, features = ["timer-futures-timer"], path = "../../stream-throttle"}


# [patch.crates-io]
# dodrio={path="../../dodrio"}


# [target.'cfg(target_arch = "wasm32")'.dependencies]


# uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
# console_log = { version = "0.2", features = ["color"] }
# iced_web = { path = "../../iced/web" }
# tracing-wasm = "0.2.0"
# console_error_panic_hook = "0.1.6"


# [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
emg_web = { path = "../emg_web" }
