[package]
name = "emg_bind"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
description = "element motion graph iced bind"
repository = "https://github.com"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["web", "iced", "emg"]
categories = ["web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = ["gpu"]
gpu = [
    "emg_winit",
    "emg_piet_gpu",
    "emg_element/gpu",
    "emg_layout/gpu",
    "emg_graphics_backend",
]
pool = []
no_default_refresh = ["emg_refresh/no_default_refresh"]


[dependencies]
gtree = { path = "../gtree" }
emg_layout = { path = "../emg_layout" }
emg_refresh = { path = "../emg_refresh" }
emg_state = { path = "../emg_state" }
emg_common = { path = "../emg_common" }
emg_futures = { path = "../emg_futures" }
emg-msg-macro = { version = "=0.1.0", path = "../emg_msg_macro" }
emg_animation = { path = "../emg_animation" }
emg = { path = "../../emg" }
emg_element = { path = "../emg_element" }

#--------------
emg_graphics_backend = { path = "../emg_graphics_backend", optional = true }
emg_winit = { path = "../emg_winit", optional = true }
#---------------
tracing = "0.1"
thiserror = "1.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
emg_web = { path = "../emg_web" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
emg_piet_gpu = { path = "../emg_piet_gpu", optional = true }
