[package]
name = "emg_bind"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
description = "element motion graph iced bind"
repository = "https://github.com"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["web", "iced", "emg"]
categories = ["web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
# [lib]
# crate-type = ["rlib"]


[features]
default = ["gpu"]
gpu = [
    "emg_winit",
    "emg_vello",
    "emg_element/gpu",
    "emg_layout/gpu",
    "emg_graphics_backend",
]
debug = ["emg_winit/debug", "emg_common/debug", "emg_layout/debug"]
pool = []
no_default_shaping = ["emg_shaping/no_default_shaping"]
insta = []
video-player = ["emg_element/video-player"]
show-fps = [
    "emg_winit?/show-fps",
    "emg_vello?/show-fps",
    "emg_graphics_backend?/show-fps",
]

[dependencies]
emg_layout = { path = "../emg_layout" }
emg_shaping = { path = "../emg_shaping" }
emg_state = { path = "../emg_state" }
emg_common = { path = "../emg_common" }
emg_futures = { path = "../emg_futures" }
emg-msg-macro = { version = "=0.1.0", path = "../emg_msg_macro" }
emg_animation = { path = "../emg_animation" }
emg = { path = "../emg" }
emg_element = { path = "../emg_element" }
emg_orders = { path = "../emg_orders" }
#--------------
emg_graphics_backend = { path = "../emg_graphics_backend", optional = true }
emg_winit = { path = "../emg_winit", optional = true }
#---------------
tracing = "0.1"
thiserror = "1.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
emg_web = { path = "../emg_web" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# emg_piet_gpu = { path = "../emg_piet_gpu", optional = true }
emg_vello = { path = "../emg_vello", optional = true }

# https://doc.rust-lang.org/cargo/reference/unstable.html#per-package-target
# 运行cargo以-Z bindeps启用此功能。
# [build-dependencies]
# bar = { version = "1.0", artifact = "cdylib", target = "wasm32-unknown-unknown" }
# [dependencies]
# bar = { artifact = "bin", version = "1.0", lib = true }

[dev-dependencies]
insta = "1"
