[package]
name = "emg_common"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
pool = ["im-rc/pool"]


[dependencies]
nalgebra = "0.31.1"

tracing = "0.1"
dyn_partial_eq = { path = "../../dyn_partial_eq" }

ordered-float = "3.0.0"
derive_more = "0.99"
im-rc = { version = "15.1.0" }
# imbl = { path = "../../imbl" }
# smol_str = "0.1.23"
# smartstring = "1.0.1"
compact_str = "0.5.2"
# tinyvec = { version = "1.5.1", features = ["alloc"] }
smallvec = { version = "1.9.0", features = ["const_generics"] }
# smallvec = { version = "1.8.0" }
better_any = { path = "../../better_any/better_any", features = [
    "nightly",
    "derive",
] }

bitflags = "1.2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-timer = { version = "0.2" }
