[package]
name = "emg_core"
version = "0.1.0"
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ordered-float = "2.8.0"
derive_more = "0.99.13"
im-rc = "15.0.0"
