[package]
name = "emg_core"
version = "0.1.0"
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ordered-float = "2"
derive_more = "0.99"
im-rc = "15.0.0"
# imbl = { path = "../../imbl" }
smol_str = "0.1.21"
# compact_str = "0.2.0"
tinyvec = { version = "1.5.1", features = ["alloc"] }
# smallvec = { version = "1.8.0", features = ["const_generics", "union"] }
smallvec = { version = "1.8.0" }
