[package]
name = "emg_core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
pool = ["im-rc/pool"]


[dependencies]
tracing = "0.1"
dyn_partial_eq = { path = "../../dyn_partial_eq" }

ordered-float = "3.0.0"
derive_more = "0.99"
im-rc = { version = "15.1.0" }
# imbl = { path = "../../imbl" }
# smol_str = "0.1.23"
# smartstring = "1.0.1"
compact_str = "0.5.0"
# tinyvec = { version = "1.5.1", features = ["alloc"] }
smallvec = { version = "1.8.0", features = ["const_generics"] }
# smallvec = { version = "1.8.0" }
