[package]
name = "emg_element"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["dylib", "rlib"]

[features]
default = ["gpu", "new_node"]
gpu = ["emg_native", "emg_piet_gpu", "emg_layout/gpu"]
old_node = []
new_node = []


[dependencies]
emg_common = { path = "../emg_common" }
emg_state = { path = "../emg_state" }
emg_refresh = { path = "../emg_refresh" }
emg_layout = { path = "../emg_layout" }
emg_hasher = { path = "../emg_hasher" }
emg = { path = "../../emg" }
#-----
derive_more = "0.99"
strum = { version = "0.24", features = ["derive"] }
dyn-clone = "1.0.9"
tracing = "0.1"
match_any = "1.0.1"
either = "1.8.0"
indexmap = "1.9"
illicit = "1.1.2"
#------
emg_native = { path = "../emg_native", optional = true }

#------------------

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
emg_piet_gpu = { path = "../emg_piet_gpu", optional = true }
