[package]
name = "emg_element"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["rlib"]

[features]
default = ["gpu"]
# gpu = ["emg_native", "emg_piet_gpu", "emg_layout/gpu"]
gpu = ["emg_native", "emg_vello", "emg_layout/gpu"]


[dependencies]
emg_common = { path = "../emg_common" }
emg_state = { path = "../emg_state" }
emg_shaping = { path = "../emg_shaping" }
emg_layout = { path = "../emg_layout" }
emg_hasher = { path = "../emg_hasher" }
emg_orders = { path = "../emg_orders" }
emg = { path = "../emg" }
#-----
derive_more = "0.99"
strum = { version = "0.24", features = ["derive"] }
dyn-clone = "1.0.10"
tracing = "0.1"
match_any = "1.0.1"
either = "1.8.0"
indexmap = "1.9"
illicit = "1.1.2"
thiserror = "1.0"
indented = "0.1.0"
#------
emg_native = { path = "../emg_native", optional = true }

#------------------

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# emg_piet_gpu = { path = "../emg_piet_gpu", optional = true }
emg_vello = { path = "../emg_vello", optional = true }

[dev-dependencies]
