[package]
name = "emg_futures"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#TODO remove default: thread-pool
[features]
default = ["thread-pool"]
thread-pool = ["futures/thread-pool"]

[dependencies.futures]
version = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
