[package]
name = "emg_global"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_init = "1.0.3"
emg_common = { path = "../emg_common" }
emg_state = { path = "../emg_state" }
illicit = "1.1.2"
flume = "0.10.14"
