[package]
name = "emg_hasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
# rustc-hash = "1.1.0"
# highway = "0.7"
# fnv = "1.0.7"
ahash = "0.8.3"
# twox-hash = "1.6.1"
