[package]
name = "emg_layout"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.29.0"
# nalgebra = "0.29.0"
derive_more = "0.99"
seed_styles = { path = "../../styles_hooks/seed_styles" }
seed_style_macros = { path = "../../styles_hooks/seed_styles/seed_style_macros" }

emg_refresh = { path = "../emg_refresh" }
emg_state = { path = "../emg_state" }
emg = { path = "../../emg" }
# topo = { version = "0.13.2", features = ["wasm-bindgen"] }
log = "0.4"
env_logger = "0.9.0"
# tracing = { version = "^0.1" }
tracing = "0.1"

# tracing-wasm = "0.2.0"
indented = "0.1.0"
# tracing-log = { version = "", features = ["env_logger"] }
emg_animation = { path = "../emg_animation" }
emg_core = { path = "../emg_core" }
emg_hasher = { path = "../emg_hasher" }


ahash = "0.7.6"
indexmap = "1.7"

illicit = "1.1.2"

[dev-dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tracing-flame = "0.1.0"
insta = "1.8"
