[package]
name = "emg_layout"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bench = []

[profile.dev]
split-debuginfo = "unpacked"
[profile.bench]
lto = true
[lib]
crate-type = ["cdylib", "rlib"]
bench = false


[dependencies]
parse-display = "0.5.5"
slotmap = "1.0.6"

nalgebra = "0.31.0"
# nalgebra = "0.29.0"
derive_more = "0.99"
seed_styles = { path = "../../styles_hooks/seed_styles" }
seed_style_macros = { path = "../../styles_hooks/seed_styles/seed_style_macros" }

emg_refresh = { path = "../emg_refresh" }
emg_state = { path = "../emg_state" }
emg = { path = "../../emg" }
log = "0.4"
env_logger = "0.9.0"
# tracing = { version = "^0.1" }
tracing = "0.1"

# tracing-wasm = "0.2.0"
indented = "0.1.0"
# tracing-log = { version = "", features = ["env_logger"] }
emg_animation = { path = "../emg_animation" }
emg_core = { path = "../emg_core" }
emg_hasher = { path = "../emg_hasher" }

# ownref = "0.3.1"
# ahash = "0.7.6"
indexmap = "1.9"

illicit = "1.1.2"

cassowary = { path = "../../cassowary-rs" }

# tinyvec = { version = "1.5.1", features = ["alloc"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
tracing-flame = "0.2.0"
insta = "1"
criterion = { version = "0.3", features = ["html_reports", "real_blackbox"] }

[[bench]]
name = "my_benchmark"
harness = false
