[package]
name = "emg_layout"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gpu"]
gpu = ["emg_native"]
pool = []
debug = []
insta = []


[profile.dev]
split-debuginfo = "unpacked"
[profile.bench]
lto = true
[lib]
# crate-type = ["rlib"]
bench = false


[dependencies]
emg_shaping = { path = "../emg_shaping" }
emg_state = { path = "../emg_state" }
emg = { path = "../emg" }
emg_animation = { path = "../emg_animation" }
emg_common = { path = "../emg_common" }
emg_hasher = { path = "../emg_hasher" }
#----------------
emg_native = { path = "../emg_native", optional = true }

#----------------
float-cmp = { version = "0.9.0", features = ["std"] }
either = "1.8.1"
parse-display = "0.8.0"
slotmap = "1.0.6"
derive_more = "0.99"
seed_styles = { path = "../../styles_hooks/seed_styles" }
seed_style_macros = { path = "../../styles_hooks/seed_styles/seed_style_macros" }
env_logger = "0.10.0"
tracing = "0.1"
indented = "0.1.0"
# ownref = "0.3.1"
# ahash = "0.7.6"
indexmap = "1.9"
illicit = "1.1.2"
cassowary = { path = "../../cassowary-rs" }
# tinyvec = { version = "1.5.1", features = ["alloc"] }
nom = "7.1.3"

nu-ansi-term = "0.47.0"


[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-flame = "0.2.0"
insta = "1"
criterion = { version = "0.4.0", features = ["html_reports", "real_blackbox"] }
tracing-tree = "0.2.2"

color-eyre = "0.6"
tracing-error = "0.2.0"


[[bench]]
name = "my_benchmark"
harness = false
