[package]
name = "emg_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["cdylib", "rlib"]


[features]
debug = []

[dependencies]
emg_futures = { path = "../emg_futures", features = ["thread-pool"] }
emg_common = { path = "../emg_common" }
emg_renderer = { path = "../emg_renderer" }

#-----
dyn-clone = "1.0.9"
tracing = "0.1"
