[package]
name = "emg_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["rlib"]


[features]
debug = []

[dependencies]
seed_styles = { path = "../../styles_hooks/seed_styles" }
seed_style_macros = { path = "../../styles_hooks/seed_styles/seed_style_macros" }
#-----
#TODO not directly use thread-pool
emg_futures = { path = "../emg_futures", features = ["thread-pool"] }
emg_common = { path = "../emg_common" }
emg_renderer = { path = "../emg_renderer" }
emg_state = { path = "../emg_state" }
emg_shaping = { path = "../emg_shaping" }
#---------------
dyn-clone = "1.0.9"
tracing = "0.1"
static_init = "1.0.3"
bitflags = { path = "../../bitflags_export_const" }
