[package]
name = "emg_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
# [lib]
# crate-type = ["rlib"]


[features]
debug = []
video-player = ["gstreamer", "gstreamer-app", "derive_more", "num-traits"]


[dependencies]
seed_styles = { path = "../../styles_hooks/seed_styles" }
seed_style_macros = { path = "../../styles_hooks/seed_styles/seed_style_macros" }
#-----
#TODO not directly use thread-pool
emg_futures = { path = "../emg_futures", features = ["thread-pool"] }
emg_common = { path = "../emg_common" }
emg_renderer = { path = "../emg_renderer" }
emg_state = { path = "../emg_state" }
emg_shaping = { path = "../emg_shaping" }
emg_hasher = { path = "../emg_hasher" }

# emg_orders = { path = "../emg_orders" }
#---------------
dyn-clone = "1.0.11"
tracing = "0.1"
static_init = { version = "1.0.3" }
bitflags = { path = "../../bitflags_export_const" }
integer-hasher = "0.1.1"
indexmap = "1.9"

# video player
thiserror = "1"
gstreamer = { version = "0.20.3", optional = true }
gstreamer-app = { version = "0.20.0", optional = true } # appsink
derive_more = { version = "0.99.5", optional = true }
# glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.17", version = "0.17" }
num-traits = { version = "0.2", optional = true } # convert rationals to floats (ToPrimitive)
