[package]
name = "emg_orders"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "^0.1" }
emg_animation = {path = "../emg_animation"}


[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen-futures = "^0.4"
wasm-bindgen="^0.2"


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "^0.3"


[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "^0.3"
features = [
    "Event",
    
]