[package]
name = "emg_piet_gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emg_native = { path = "../emg_native" }
emg_graphics_backend = { path = "../emg_graphics_backend" }
#------
piet-gpu = { path = "../../piet-gpu/piet-gpu" }
piet-gpu-hal = { path = "../../piet-gpu/piet-gpu-hal" }
#------
raw-window-handle = "0.4"
tracing = "0.1"
