[package]
name = "emg_refresh"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
emg_state = { path = "../emg_state" }
tracing = { version = "^0.1" }

[dev-dependencies]
console_log = { version = "0.2", features = ["color"] }
wasm-bindgen-test = "0.3"
anchors = { path = "../../anchors" }
