[package]
name = "emg_refresh"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
emg_state = { path = "../emg_state" }
emg_core = { path = "../emg_core" }

tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# console_log = { version = "0.2", features = ["color"] }


[dev-dependencies]
wasm-bindgen-test = "0.3"
anchors = { path = "../../anchors" }
console_error_panic_hook = "0.1"
cfg-if = "1"
# ctor = "0.1.20"
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tracing-wasm = "0.2.0"
