[package]
name = "emg_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["rlib"]

[dependencies]
emg_common = { path = "../emg_common" }
peniko = { git = "https://github.com/linebender/peniko", rev = "8cb710f" }
tracing = "0.1"
# for DrawGlyphs
vello = { path = "../../piet-gpu-new" }
