[package]
name = "emg_shaping"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["rlib"]


[features]
default = []
no_default_shaping = []


[dependencies]
emg_state = { path = "../emg_state" }
emg_common = { path = "../emg_common" }

dyn_partial_eq = { path = "../../dyn_partial_eq" }

tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# console_log = { version = "0.2", features = ["color"] }


[dev-dependencies]
wasm-bindgen-test = "0.3"
anchors = { path = "../../anchors" }
console_error_panic_hook = "0.1"
cfg-if = "1"
# ctor = "0.1.20"
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tracing-wasm = "0.2"
