[package]
name = "emg_state"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2018"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
anchors = { path="../../anchors" }
anymap = "0.12.1"
slotmap = "1.0.3"
topo = { version="0.13.2", features=["wasm-bindgen"] }
# log = "0.4"
derive_more = "0.99"
tracing = { version="^0.1" }
emg_core = { path="../emg_core" }
[dev-dependencies]
wasm-bindgen-test = "0.3"
