[package]
name = "emg_state"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
emg_hasher = { path = "../emg_hasher" }

anchors = { path = "../../anchors" }
anymap = "0.12.1"
slotmap = "1.0"
topo = { version = "0.13.2", features = ["wasm-bindgen"] }
# log = "0.4"
derive_more = "0.99"
tracing = "0.1"
emg_common = { path = "../emg_common" }

# ahash = "0.7.6"
indexmap = "1.9"

[dev-dependencies]
wasm-bindgen-test = "0.3"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.5"
