[package]
name = "emg_state"
version = "0.1.0"
authors = ["崔路明 <cuiluming@chaoway.net>"]
edition = "2021"
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["engine-try-borrow-mut-no-panic"]
engine-try-borrow-mut-no-panic = []

# [lib]
# crate-type = ["rlib"]

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
emg_hasher = { path = "../emg_hasher" }

anchors = { path = "../../anchors" }
# anymap = "0.12.1"
anymap = "1.0.0-beta.2"
slotmap = "1.0"
topo = { version = "0.13.2", path = "../../moxie/topo" }
# log = "0.4"
derive_more = "0.99"
tracing = "0.1"
emg_common = { path = "../emg_common" }

# ahash = "0.7.6"
indexmap = "1.9"
illicit = "1.1.2"
thiserror = "1.0"
weak-table = "0.3.2"
anyhow = "1.0.70"


[dev-dependencies]
tracing-error = "0.2.0"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = { path = "../../tracing-tree" }
color-eyre = "0.6"


[target.'cfg(target_arch = "wasm32")'.dependencies]
topo = { version = "0.13.2", path = "../../moxie/topo", features = [
    "wasm-bindgen",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
