[package]
name = "emg_web"
version = "0.1.0"
edition = "2021"

[profile.dev]
split-debuginfo = "unpacked"
[lib]
crate-type = ["dylib", "rlib"]


[features]
default = []
# pool = ["emg_common/pool", "emg/pool", "seed_styles/pool"]
pool = ["emg/pool", "emg_common/pool", "seed_styles/pool"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emg_refresh = { path = "../emg_refresh" }
emg_layout = { path = "../emg_layout" }
emg_animation = { path = "../emg_animation" }
emg_orders = { path = "../emg_orders" }
emg_state = { path = "../emg_state" }
emg_hasher = { path = "../emg_hasher" }
emg_common = { path = "../emg_common" }
emg_futures = { path = "../emg_futures" }
#----
dodrio = { path = "../../dodrio" }
seed_styles = { path = "../../styles_hooks/seed_styles" }
dyn-clone = "1.0.9"
derive_more = "0.99"
tracing = "0.1"
cfg-if = "1.0.0"
either = "1.8.0"
emg = { path = "../../emg" }
indexmap = "1.9"
vec-string = "0.1.1"                                      #TODO move to dev-dependencies

match_any = "1.0.1"
strum = { version = "0.24", features = ["derive"] }
illicit = "1.1.2"
# dyn-clonable = "0.9.0"


[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "console",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "InputEvent",
    "KeyboardEvent",
    "IdleRequestOptions",
]


[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
wasm-bindgen-futures = "^0.4"
wasm-bindgen = "0.2"


[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
wasm-bindgen-test = "0.3"
